--- a/src/Page/ProductDetail.css
+++ b/src/Page/ProductDetail.css
@@ -148,13 +148,13 @@
 section {
     margin: 0;
     padding: 0;
-  }
-  
+}
+
 .hrule {
     border-top: 1px solid #d2d2d285;
     margin: 0;
     padding: 0;
-  }
+}
 
 .product-meta {
     margin-top: 20px;
@@ -213,6 +213,7 @@ section {
     font-weight: bold;
     font-family: 'Lato';
 }
+
 .better li {
     font-size: 14px;
     list-style-type: none;
@@ -224,7 +225,6 @@ section {
 ul.better li {
   background-position: left 0px;
 }
-
 
 .description-title {
     margin-top: 30px;
@@ -247,12 +247,15 @@ ul.better li {
     border: 1px solid #D7D7D7;
     border-radius: 7px;
 }
+
 .description-text {
     flex: 1;
 }
-.description-text p{
+
+.description-text p {
     font-size: 14px;
 }
+
 .description-heading {
     font-size: 1.25rem;
     margin-bottom: 10px;
@@ -261,13 +264,58 @@ ul.better li {
 .long-description {
     margin-top: 20px;
 }
-.relate-products {
-    display: flex;
-    justify-content: flex-end;
+
+.related-products {
+    position: relative;
 }
-.related-products h4{
+
+.related-products h4 {
     font-weight: 500;
     font-size: 20px;
     line-height: 1rem;
-    
+    margin-bottom: 20px;
+    display: inline-block;
+}
+
+.related-products .col-12 {
+    display: flex;
+    align-items: center;
+}
+
+.arrow-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    margin-left: 10px;
+    outline: none;
+    box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.6); 
+
+}
+
+.arrow-button img {
+    width: 20px;
+    height: 20px;
+}
+
+#slider {
+    display: flex;
+    overflow: hidden;
+    padding: 10px 0;
+    position: relative;
+}
+
+.related-products-list {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.related-products-item {
+    min-width: 25%; /* Assuming 4 items per slide */
+    transition: transform 0.5s ease-in-out;
+    padding-right: 10px; /* Space between items */
+}
+
+.product-card {
+    margin-bottom: 20px;
 }
